[package]
name = "the_block"
version = "0.1.0"
edition = "2021"
build = "build.rs"
 
[dependencies]
crypto = { path = "../crypto" }
crypto_suite = { path = "../crates/crypto_suite" }
python_bridge = { path = "../crates/python_bridge", optional = true }
serde = { workspace = true }
inflation = { path = "../inflation" }
rand = { path = "../crates/rand" }
dkg = { path = "../dkg" }
histogram_fp = { path = "../crates/histogram_fp" }
foundation_time = { path = "../crates/foundation_time" }
diagnostics = { path = "../crates/diagnostics" }
concurrency = { path = "../crates/concurrency", features = ["serde"] }
# Wallet framework
wallet = { path = "../crates/wallet" }
# Async runtime facade
runtime = { path = "../crates/runtime", default-features = false, features = ["inhouse-backend"] }
httpd = { path = "../crates/httpd" }
http_env = { path = "../crates/http_env" }
# Region policy packs
jurisdiction = { path = "../crates/jurisdiction" }
p2p_overlay = { path = "../crates/p2p_overlay" }
# Post-quantum signature support
pqcrypto-dilithium = { path = "../crates/pqcrypto_dilithium", optional = true }
privacy = { path = "../privacy", optional = true }
cli_core = { path = "../crates/cli_core" }
foundation_serialization = { path = "../crates/foundation_serialization" }
foundation_regex = { path = "../crates/foundation_regex" }
foundation_rpc = { path = "../crates/foundation_rpc" }
foundation_telemetry = { path = "../crates/foundation_telemetry" }
foundation_metrics = { path = "../crates/foundation_metrics" }
foundation_profiler = { path = "../crates/foundation_profiler" }
foundation_archive = { path = "../crates/foundation_archive" }
foundation_unicode = { path = "../crates/foundation_unicode" }
foundation_tui = { path = "../crates/foundation_tui" }
foundation_bigint = { path = "../crates/foundation_bigint" }
base64_fp = { path = "../crates/base64_fp" }
sled = { path = "../sled" }
foundation_sqlite = { path = "../crates/foundation_sqlite", optional = true }
state = { path = "../state" }
log_index = { path = "../crates/log_index" }
# shared TLS warning helpers
tls_warning = { path = "../crates/tls_warning" }
# probabilistic rate-limit filter
# fountain coding for repair overlay (via coding crate)
# linear-algebra routines for governor
foundation_math = { path = "../crates/foundation_math" }
# minimal HTTP parsing
# account ledger for CT burns
ledger = { path = "../ledger" }
dex = { path = "../dex" }
bridges = { path = "../bridges" }
bridge-types = { path = "../crates/bridge-types" }
# serialization helpers
codec = { path = "../crates/codec" }
# storage market primitives
storage = { path = "../storage" }
storage_market = { path = "../storage_market" }
# advertising marketplace
ad-market = { path = "../crates/ad_market", package = "ad_market" }
energy_market = { path = "../crates/energy-market", package = "energy-market" }
oracle_adapter = { path = "../crates/oracle-adapter", package = "oracle-adapter" }
zkp = { path = "../crates/zkp" }
# hardware detection
# light-client integration
light-client = { path = "../crates/light-client" }
storage_engine = { path = "../crates/storage_engine", default-features = false }
coding = { path = "../crates/coding" }
# governance parameter helpers
governance-spec = { path = "../governance", package = "governance" }
# jittered RPC client
sys = { path = "../crates/sys" }
thiserror = { path = "../crates/thiserror" }

[target.'cfg(not(first_party_only))'.dependencies]
transport = { path = "../crates/transport", optional = true, default-features = false, features = ["inhouse", "quinn", "s2n-quic"] }

[target.'cfg(first_party_only)'.dependencies]
transport = { path = "../crates/transport", optional = true, default-features = false, features = ["inhouse"] }

[features]
default = ["inhouse-storage", "gpu"]
storage-rocksdb = []
inhouse-storage = []
sqlite-migration = ["dep:foundation_sqlite"]
cli = []
lightweight-integration = []
integration-tests = []
legacy-read-acks = []
quantum = ["pqcrypto-dilithium", "crypto/quantum"]

fuzzy = []
telemetry = ["bridges/telemetry", "codec/telemetry", "crypto_suite/telemetry"]
telemetry-json = ["telemetry"]
test-telemetry = ["telemetry"]
telemetry-verbose = ["telemetry"]
pq-crypto = ["pqcrypto-dilithium"]
bluetooth = []
gpu = ["crypto_suite/gpu"]
gateway = []
quic = ["transport"]
quinn = ["quic", "transport/quinn"]
inhouse = []
privacy = ["dep:privacy"]
reentrant_scheduler = []
s2n-quic = ["quic", "transport/s2n-quic"]
python-bindings = ["dep:python_bridge", "python_bridge/python-bindings"]

[dev-dependencies]
jurisdiction = { path = "../crates/jurisdiction" }
sim = { package = "tb-sim", path = "../sim" }
testkit = { path = "../crates/testkit" }
foundation_tls = { path = "../crates/foundation_tls" }
verifier_selection = { path = "../crates/verifier_selection" }

[build-dependencies]
dependency_guard = { path = "../crates/dependency_guard" }
crypto_suite = { path = "../crates/crypto_suite" }

[[bench]]
name = "startup_rebuild"
harness = false

[[bench]]
name = "parallel_runtime"
harness = false

[[bench]]
name = "telemetry_memory"
harness = false

[[bench]]
name = "order_book"
harness = false

[[bench]]
name = "dilithium"
harness = false

[[bench]]
name = "ed25519_verify"
harness = false

[[test]]
name = "nonce_supply_prop"
path = "tests/nonce_supply_prop.rs"

[lib]
name = "the_block"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "aggregator"
path = "src/bin/aggregator.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "ban"
path = "src/bin/ban.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "db_compact"
path = "src/bin/db_compact.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "db_migrate"
path = "src/bin/db_migrate.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "gov"
path = "src/bin/gov.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "net"
path = "src/bin/net.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "node"
path = "src/bin/node.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "snapshot"
path = "src/bin/snapshot.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "wallet"
path = "src/bin/wallet.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "migrate_overlay_store"
path = "../scripts/migrate_overlay_store.rs"
test = false
