[package]
name = "tb-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
light-client = { path = "../crates/light-client" }
bincode = "1.3"
rocksdb = "0.21"
sha3 = "0.10"
dex = { path = "../dex" }
the_block = { path = "../node" }
ledger = { path = "../ledger" }
dkg = { path = "../dkg" }
explorer = { path = "../explorer" }
ed25519-dalek = { version = "2.2.0", features = ["std"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3"
serde_yaml = "0.9"

[[bin]]
name = "htlc_scenarios"
path = "htlc_scenarios.rs"

[[bin]]
name = "snark_overhead"
path = "snark_overhead.rs"

[[bin]]
name = "dkg_latency"
path = "dkg_latency.rs"

[[bin]]
name = "mempool_spam"
path = "mempool_spam.rs"

[[bin]]
name = "did"
path = "did.rs"

