[package]
name = "tb-sim"
version = "0.1.0"
edition = "2021"

[features]
default = []
runtime-wrapper = ["dep:runtime"]
transport-wrapper = ["dep:transport"]
overlay-wrapper = ["dep:p2p_overlay"]
storage-wrapper = ["dep:storage_engine"]
coding-wrapper = ["dep:coding"]
crypto-wrapper = ["dep:crypto_suite"]
codec-wrapper = ["dep:codec"]
dependency-fault = [
    "runtime-wrapper",
    "transport-wrapper",
    "overlay-wrapper",
    "storage-wrapper",
    "coding-wrapper",
    "crypto-wrapper",
    "codec-wrapper",
]

[dependencies]
rand = "0.8"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
light-client = { path = "../crates/light-client" }
bincode = "1.3"
rocksdb = "0.21"
dex = { path = "../dex" }
the_block = { path = "../node" }
ledger = { path = "../ledger" }
dkg = { path = "../dkg" }
explorer = { path = "../explorer" }
hex = "0.4"
anyhow = "1"
cli_core = { path = "../crates/cli_core" }
coding = { path = "../crates/coding", optional = true }
codec = { path = "../crates/codec", optional = true }
crypto_suite = { path = "../crates/crypto_suite", optional = true }
once_cell = "1"
p2p_overlay = { path = "../crates/p2p_overlay", optional = true }
runtime = { path = "../crates/runtime", default-features = false, features = ["inhouse-backend"], optional = true }
storage_engine = { path = "../crates/storage_engine", optional = true, default-features = false, features = ["rocksdb", "sled"] }
transport = { path = "../crates/transport", optional = true }
thiserror = "1"
tempfile = "3"

[dev-dependencies]
serde_yaml = "0.9"

[[bin]]
name = "htlc_scenarios"
path = "htlc_scenarios.rs"

[[bin]]
name = "snark_overhead"
path = "snark_overhead.rs"

[[bin]]
name = "dkg_latency"
path = "dkg_latency.rs"

[[bin]]
name = "mempool_spam"
path = "mempool_spam.rs"

[[bin]]
name = "did"
path = "did.rs"

[[bin]]
name = "dependency_fault"
path = "src/dependency_fault.rs"
required-features = ["dependency-fault"]

