[package]
name = "tb-sim"
version = "0.1.0"
edition = "2021"

[features]
default = []
sim-db = []
runtime-wrapper = ["dep:runtime"]
transport-wrapper = ["dep:transport"]
overlay-wrapper = ["dep:p2p_overlay"]
storage-wrapper = ["dep:storage_engine"]
coding-wrapper = ["dep:coding"]
crypto-wrapper = []
codec-wrapper = ["dep:codec"]
dependency-fault = [
    "runtime-wrapper",
    "transport-wrapper",
    "overlay-wrapper",
    "storage-wrapper",
    "coding-wrapper",
    "crypto-wrapper",
    "codec-wrapper",
]

[dependencies]
rand = { path = "../crates/rand" }
csv = "1"
serde = { version = "1", features = ["derive"] }
foundation_serialization = { path = "../crates/foundation_serialization" }
light-client = { path = "../crates/light-client" }
dex = { path = "../dex" }
the_block = { path = "../node" }
ledger = { path = "../ledger" }
dkg = { path = "../dkg" }
explorer = { path = "../explorer" }
anyhow = "1"
cli_core = { path = "../crates/cli_core" }
coding = { path = "../crates/coding", optional = true }
codec = { path = "../crates/codec", optional = true }
crypto_suite = { path = "../crates/crypto_suite" }
foundation_lazy = { path = "../crates/foundation_lazy" }
p2p_overlay = { path = "../crates/p2p_overlay", optional = true }
runtime = { path = "../crates/runtime", default-features = false, features = ["inhouse-backend"], optional = true }
storage_engine = { path = "../crates/storage_engine", optional = true, default-features = false }
transport = { path = "../crates/transport", optional = true }
thiserror = { path = "../crates/thiserror" }
sys = { path = "../crates/sys" }

[dev-dependencies]

[[bin]]
name = "htlc_scenarios"
path = "htlc_scenarios.rs"

[[bin]]
name = "snark_overhead"
path = "snark_overhead.rs"

[[bin]]
name = "dkg_latency"
path = "dkg_latency.rs"

[[bin]]
name = "mempool_spam"
path = "mempool_spam.rs"

[[bin]]
name = "did"
path = "did.rs"

[[bin]]
name = "dependency_fault"
path = "src/dependency_fault.rs"
required-features = ["dependency-fault"]

