[package]
name = "sled"
version = "0.34.0"
edition = "2021"

[features]
default = []
legacy-format = ["dep:sled-legacy"]

[dependencies]
storage_engine = { path = "../crates/storage_engine" }
thiserror = { path = "../crates/thiserror" }
foundation_lazy = { path = "../crates/foundation_lazy" }
crypto_suite = { path = "../crates/crypto_suite" }
sys = { path = "../crates/sys" }

[dependencies.sled-legacy]
package = "sled"
version = "0.34"
optional = true
