[package]
name = "state"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto_suite = { path = "../crates/crypto_suite" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1"
hex = "0.4"
storage_engine = { path = "../crates/storage_engine", default-features = false }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
