[package]
name = "state"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
crypto_suite = { path = "../crates/crypto_suite" }
thiserror = "1"
storage_engine = { path = "../crates/storage_engine", default-features = false }
sys = { path = "../crates/sys" }

[build-dependencies]
dependency_guard = { path = "../crates/dependency_guard" }
