[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[features]
default = []
telemetry = []

[dependencies]
serde = { workspace = true }
thiserror = { path = "../crates/thiserror" }
crypto_suite = { path = "../crates/crypto_suite" }
foundation_serialization = { path = "../crates/foundation_serialization" }

[dev-dependencies]
sys = { path = "../crates/sys" }
the_block = { path = "../node", features = ["telemetry"] }
