[package]
name = "storage_market"
version = "0.1.0"
edition = "2021"

[dependencies]
storage = { path = "../storage" }
foundation_serialization = { path = "../crates/foundation_serialization" }
thiserror = { path = "../crates/thiserror" }
serde = { workspace = true }
storage_engine = { path = "../crates/storage_engine" }

[dev-dependencies]
sys = { path = "../crates/sys" }
