[package]
name = "ad_market"
version = "0.1.0"
edition = "2021"

[dependencies]
foundation_serialization = { path = "../foundation_serialization" }
foundation_metrics = { path = "../foundation_metrics" }
crypto_suite = { path = "../crypto_suite" }
verifier_selection = { path = "../verifier_selection" }
zkp = { path = "../zkp" }
serde = { workspace = true }
sled = { path = "../../sled" }

[dev-dependencies]
sys = { path = "../sys" }
rand = { path = "../rand" }
