[package]
name = "cli_core"
version = "0.1.0"
edition = "2021"
authors = ["The Block Team"]
license = "MIT OR Apache-2.0"

[lib]
name = "cli_core"
path = "src/lib.rs"

[dependencies]
thiserror = { path = "../thiserror" }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
