[package]
name = "codec"
version = "0.1.0"
edition = "2021"

[features]
default = []
telemetry = ["dep:metrics"]

[dependencies]
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
foundation_serialization = { path = "../foundation_serialization" }
thiserror = "1"
metrics = { version = "0.21", optional = true }
