[package]
name = "codec"
version = "0.1.0"
edition = "2021"

[features]
default = []
telemetry = ["dep:foundation_metrics"]

[dependencies]
serde = { version = "1", features = ["derive"] }
foundation_serialization = { path = "../foundation_serialization" }
thiserror = { path = "../thiserror" }
foundation_metrics = { path = "../foundation_metrics", optional = true }
