[package]
name = "coding"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = { version = "0.10", features = ["rand_core"] }
rand = { version = "0.8", features = ["std"] }
reed-solomon-erasure = "6"
raptorq = "2"
thiserror = "1"
zstd = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
