[package]
name = "coding"
version = "0.1.0"
edition = "2021"

[features]
allow-third-party = []

[dependencies]
thiserror = { path = "../thiserror" }
serde = { version = "1", features = ["derive"] }
foundation_serialization = { path = "../foundation_serialization" }
base64_fp = { path = "../base64_fp" }
crypto = { path = "../../crypto" }
sys = { path = "../sys" }
