[package]
name = "coding"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { path = "../thiserror" }
serde = { workspace = true }
foundation_serialization = { path = "../foundation_serialization" }
base64_fp = { path = "../base64_fp" }
crypto = { path = "../../crypto" }
sys = { path = "../sys" }

[dev-dependencies]
rand = { path = "../rand" }
