[package]
name = "crypto_suite"
version = "0.1.0"
edition = "2021"

[features]
default = []
sha3-fallback = []
dilithium = []
threshold = []
telemetry = []

[dependencies]
rand = { path = "../rand" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
num-bigint = { version = "0.4", features = ["std"] }
num-traits = "0.2"
codec = { path = "../codec" }
foundation_lazy = { path = "../foundation_lazy" }

[dev-dependencies]
testkit = { path = "../testkit" }

[[bench]]
name = "ed25519"
harness = false
