[package]
name = "crypto_suite"
version = "0.1.0"
edition = "2021"

[features]
default = []
sha3-fallback = []
dilithium = []
threshold = []
telemetry = ["foundation_metrics"]
gpu = []

[dependencies]
rand = { path = "../rand" }
thiserror = { path = "../thiserror" }
foundation_serialization = { path = "../foundation_serialization" }
foundation_bigint = { path = "../foundation_bigint" }
serde = { package = "foundation_serde", path = "../foundation_serde", default-features = false }
codec = { path = "../codec" }
foundation_lazy = { path = "../foundation_lazy" }
foundation_metrics = { path = "../foundation_metrics", optional = true }

[dev-dependencies]
testkit = { path = "../testkit" }

[[bench]]
name = "ed25519"
harness = false
