[package]
name = "energy-market"
version = "0.1.0"
edition = "2021"

[dependencies]
foundation_serialization = { path = "../foundation_serialization" }
foundation_metrics = { path = "../foundation_metrics" }
thiserror = { path = "../thiserror" }
serde = { workspace = true }
crypto_suite = { path = "../crypto_suite" }
