[package]
name = "foundation_rpc"
version = "0.1.0"
edition = "2021"
authors = ["The Block Project <dev@theblock>" ]
description = "First-party RPC envelope and helpers for The Block node stack"
license = "Apache-2.0"
publish = false

[dependencies]
foundation_serialization = { path = "../foundation_serialization" }
httpd = { path = "../httpd" }
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
