[package]
name = "foundation_serde_derive"
version = "0.1.0"
edition = "2021"
authors = ["The Block Developers"]
license = "MIT OR Apache-2.0"
description = "First-party derive macros for serialization - no runtime dependencies"

[lib]
proc-macro = true

[dependencies]
# Proc macro dependencies (build-time only, not in final binary)
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
