[package]
name = "foundation_serialization"
version = "0.1.0"
edition = "2021"
description = "First-party serialization scaffolding for The Block"
authors = ["The Block Dev Team"]
license = "MIT"

[features]
default = []

[dependencies]
serde = { package = "foundation_serde", path = "../foundation_serde", default-features = false }
foundation_serde_derive = { path = "../foundation_serde_derive" }
